--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ s01/s01_4/target
 s01/s01_5/target
 s01/s01_6/target
 s01/s01_7/target
+s01/s01_8/target
+s01/s01_9/target
+s01/hello/target
+s01/s01_10/target
