--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ s01/s01_10/target
 s01/s01_11/target
 s01/s01_12/target
 s01/s01_13/target
+s01/s01_14/target
+s01/s01_15/target
+s01/s01_16/target
+s01/s01_17/target
