--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ s01/s01_15/target
 s01/s01_16/target
 s01/s01_17/target
 s01/s01_18/target
+s01/s01_19/target
+s01/s01_20/target
+
 
 
 s02/cli_list/target
