--- a/s02/tcp_todo/caesar/Cargo.toml
+++ b/s02/tcp_todo/caesar/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cli_list"
+name = "caesar"
 version = "0.1.0"
-authors = ["dollarkiller <wangy@mvalley.io>"]
+authors = ["dollarkillerx <adapawang@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4.0"
 chrono = "0.4.19"
+serde_json = "1.0.59"
+serde = { version = "1.0.117", features = ["derive"] }
