--- a/s02/udp_client/Cargo.toml
+++ b/s02/udp_client/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "cli_list"
+name = "udp_client"
 version = "0.1.0"
-authors = ["dollarkiller <wangy@mvalley.io>"]
+authors = ["dollarkillerx <adapawang@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
-chrono = "0.4.19"
