--- a/s02/tcp_todo/common/Cargo.toml
+++ b/s02/tcp_todo/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "caesar"
+name = "common"
 version = "0.1.0"
 authors = ["dollarkillerx <adapawang@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
-chrono = "0.4.19"
-serde_json = "1.0.59"
-serde = { version = "1.0.117", features = ["derive"] }
-common = {path="../common"}
