--- a/s02/tcp_todo/caesar/Cargo.toml
+++ b/s02/tcp_todo/caesar/Cargo.toml
@@ -11,4 +11,6 @@ lazy_static = "1.4.0"
 chrono = "0.4.19"
 serde_json = "1.0.59"
 serde = { version = "1.0.117", features = ["derive"] }
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
+
 common = {path="../common"}
