--- a/s02/tcp_todo/pc/Cargo.toml
+++ b/s02/tcp_todo/pc/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 serde_json = "1.0.59"
 serde = { version = "1.0.117", features = ["derive"] }
+lazy_static = "1.4.0"
 
 common = {path="../common"}
