--- a/s02/tcp_todo/pc/Cargo.toml
+++ b/s02/tcp_todo/pc/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2018"
 serde_json = "1.0.59"
 serde = { version = "1.0.117", features = ["derive"] }
 lazy_static = "1.4.0"
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
 
-common = {path="../common"}
+common = { path = "../common" }
