--- a/s02/tcp_todo/caesar/Cargo.toml
+++ b/s02/tcp_todo/caesar/Cargo.toml
@@ -12,5 +12,6 @@ chrono = "0.4.19"
 serde_json = "1.0.59"
 serde = { version = "1.0.117", features = ["derive"] }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
+rand = "0.7.3"
 
 common = {path="../common"}
