--- a/s02/tcp_todo/pt/Cargo.toml
+++ b/s02/tcp_todo/pt/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde_json = "1.0.59"
+serde = { version = "1.0.117", features = ["derive"] }
+
+common = { path = "../common" }
