--- a/s06/std_1/Cargo.toml
+++ b/s06/std_1/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 
 [dependencies]
 futures = "0.3.8"
-mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
+redis = { version = "0.17.0", features = ["async-std-comp"] }
 async-std = { version = "1.7.0", features = ["unstable", "attributes"] }
