--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ s01/s01_17/target
 s01/s01_18/target
 s01/s01_19/target
 s01/s01_20/target
-
+s01/s01_21/target
 
 s02/cli_list/target
 s02/tcp_server/target
