--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,7 @@ s13/demo5/target
 s13/demo6/target
 s13/demo7/target
 s13/demo8/target
+s13/demo9/target
 
+s13/error_handling/target
 s13/iterator/target
