--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,9 @@ s13/tr/target
 s13/test_demo/target
 s13/mimi_grep/target
 
+s13.5/demo1/target
+
+
 
 s13/error_handling/target
 s13/iterator/target
