--- a/.gitignore
+++ b/.gitignore
@@ -10,81 +10,4 @@ Cargo.lock
 **/*.rs.bk
 .idea
 
-s01/s01_1/target
-s01/s01_2/target
-s01/s01_3/target
-s01/s01_4/target
-s01/s01_5/target
-s01/s01_6/target
-s01/s01_7/target
-s01/s01_8/target
-s01/s01_9/target
-s01/hello/target
-s01/s01_10/target
-s01/s01_11/target
-s01/s01_12/target
-s01/s01_13/target
-s01/s01_14/target
-s01/s01_15/target
-s01/s01_16/target
-s01/s01_17/target
-s01/s01_18/target
-s01/s01_19/target
-s01/s01_20/target
-s01/s01_21/target
-
-s02/cli_list/target
-s02/tcp_server/target
-s02/udp_server/target
-s02/tcp_client/target
-s02/udp_client/target
-
-s02/tcp_todo/caesar/target
-s02/tcp_todo/pc/target
-s02/tcp_todo/pt/target
-
-demo/crate_demo/target
-demo/crate_demo_test/target
-
-s03/std_1/target
-s03/std_2/target
-s03/std_3/target
-s03/std_4/target
-
-s04/s04_1/target
-s04/s04_2/target
-
-s05/std_1/target
-
-s06/std_1/target
-
-s07/demo1/target
-s07/s07_1/target
-s07/s07_2/target
-
-s12/demo1/target
-s12/demo2/target
-
-s13/demo1/target
-s13/demo2/target
-s13/demo3/target
-s13/demo4/target
-s13/demo5/target
-s13/demo6/target
-s13/demo7/target
-s13/demo8/target
-s13/demo9/target
-s13/tr/target
-s13/test_demo/target
-s13/mimi_grep/target
-
-s13.5/demo1/target
-s13.5/demo2/target
-s13.5/demo3/target
-s13.5/linked_list/target
-s13.5/linked_list_v2/target
-
-s13/error_handling/target
-s13/iterator/target
-
-s09_salvo/demo1/target
+target
