--- a/s01_new/s10/Cargo.toml
+++ b/s01_new/s10/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "s01"
+name = "s10"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.8.5"
+rand = "0.9.0-alpha.2"
