--- a/simple_http/http_server/Cargo.toml
+++ b/simple_http/http_server/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.39.2", features = ["full"] }
+http = { path = "../http" }
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.124"
+async-trait = "0.1.81"
