--- a/ntex_demo/Cargo.toml
+++ b/ntex_demo/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.124"
 sqlx = { version = "0.8.0", features = [
     "runtime-tokio-rustls", "macros", "postgres", "chrono"] }
 log = "0.4.22"
+reqwest = { version = "0.11.14", features = ["json"] }
