--- a/s09_salvo/Cargo.toml
+++ b/s09_salvo/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = [".", "entity","migration"]
+members = [".", "migration"]
 
 [dependencies]
-salvo = "0.70.0"
+salvo = { version = "0.70.0", features = ["affix", "serve-static"]}
 tokio = { version = "1.17.0", features = ["full"] }
 tracing = "0.1.35"
 tracing-subscriber = "0.3.11"
@@ -16,3 +16,5 @@ chrono = { version = "0.4.38" , features = ["serde"]}
 dotenvy = "0.15.7"
 serde = {version = "1.0.207", features = ["derive"]}
 serde_json = "1.0.124"
+log = "0.4.22"
+maplit = "1.0.2"
