--- a/s09_salvo/Cargo.toml
+++ b/s09_salvo/Cargo.toml
@@ -18,3 +18,5 @@ serde = {version = "1.0.207", features = ["derive"]}
 serde_json = "1.0.124"
 log = "0.4.22"
 maplit = "1.0.2"
+async-trait = "0.1.81"
+redis = { version = "0.26.1", features = ["tokio-comp"] }
