--- a/s09_salvo/Cargo.toml
+++ b/s09_salvo/Cargo.toml
@@ -21,3 +21,4 @@ maplit = "1.0.2"
 async-trait = "0.1.81"
 redis = { version = "0.26.1", features = ["tokio-comp"] }
 xid = "1.1.1"
+futures = "0.3.30"
